<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_story_list"
        android:icon="@drawable/ic_list"
        android:title="@string/map_mode"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_translate"
        android:icon="@drawable/ic_translate"
        android:title="@string/translate"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/normal_type"
        android:title="@string/normal_type"
        app:showAsAction="never" />
    <item
        android:id="@+id/satellite_type"
        android:title="@string/satellite_type"
        app:showAsAction="never" />
    <item
        android:id="@+id/terrain_type"
        android:title="@string/terrain_type"
        app:showAsAction="never" />
    <item
        android:id="@+id/hybrid_type"
        android:title="@string/hybrid_type"
        app:showAsAction="never" />
</menu>