<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:context=".ui.detail.DetailActivity">

        <ImageView
            android:id="@+id/iv_picture"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/story_picture"
            android:scaleType="fitCenter"
            android:transitionName="picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:src="@color/dark_blue" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:transitionName="name"
            app:layout_constraintEnd_toEndOf="@id/iv_picture"
            app:layout_constraintStart_toStartOf="@id/iv_picture"
            app:layout_constraintTop_toBottomOf="@id/iv_picture"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:textSize="20sp"
            android:transitionName="desc"
            app:layout_constraintEnd_toEndOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/tv_created"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:textSize="16sp"
            android:textStyle="italic"
            android:transitionName="date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tv_desc"
            app:layout_constraintStart_toStartOf="@id/tv_desc"
            app:layout_constraintTop_toBottomOf="@id/tv_desc"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/created_at" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>