<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_picture"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/story_picture"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.0"
            tools:src="@color/dark_blue" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:textSize="24sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="@id/iv_picture"
            card_view:layout_constraintStart_toStartOf="@id/iv_picture"
            card_view:layout_constraintTop_toBottomOf="@id/iv_picture"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:lines="1"
            android:textSize="16sp"
            card_view:layout_constraintEnd_toEndOf="@id/tv_name"
            card_view:layout_constraintStart_toStartOf="@id/tv_name"
            card_view:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/tv_created"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:textSize="14sp"
            android:textStyle="italic"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="@id/tv_desc"
            card_view:layout_constraintStart_toStartOf="@id/tv_desc"
            card_view:layout_constraintTop_toBottomOf="@id/tv_desc"
            tools:text="@string/created_at" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>